chore(resources): Fix link alignment and remove solutions

--- a/styleguide/derek/pattern-components/resourceCenter-resource/refresh/_resourceCenter-resource.scss
+++ b/styleguide/derek/pattern-components/resourceCenter-resource/refresh/_resourceCenter-resource.scss
@@ -33,7 +33,8 @@
   @include make-sm-column(6);
 
   margin: 10px 0;
-  padding: 0;
+  padding: 0 0 30px;
+  position: relative;
   transition: .3s ease-in-out;
   width: 100%;
 
@@ -193,6 +194,11 @@
   line-height: 1.6em;
 }
 
+.resource-linkWrap {
+  bottom: 0;
+  position: absolute;
+}
+
 .resource-link {
   @include standard-link;
   font-family: $heading;
@@ -267,18 +273,6 @@
 
 .resource-titleStory {
   margin: 0;
-}
-
-.resource-solutionsLabel {
-  color: $gray-base;
-  margin: 0;
-}
-
-.resource-solutions {
-  @include standard-link;
-  font-size: .7em;
-  font-weight: 600;
-  line-height: 1.7em;
 }
 
 @media only screen and (min-width: $screen-sm-min) {
